[gd_scene load_steps=15 format=3 uid="uid://ba0vsw2qdmp0a"]

[ext_resource type="FontFile" uid="uid://ckaye4autekyg" path="res://assets/themes/fonts/inter/Inter-ExtraBold.ttf" id="1_6w0r5"]
[ext_resource type="Script" path="res://src/ui/components/menu_portrait/menu_portrait.gd" id="1_b83cq"]
[ext_resource type="ButtonGroup" uid="uid://bxbiah4vi02n2" path="res://src/ui/components/menu/button_group_menu.tres" id="1_grte4"]
[ext_resource type="PackedScene" uid="uid://bp6yn0qw2s6ua" path="res://src/ui/components/discover/discover.tscn" id="1_nsju2"]
[ext_resource type="Texture2D" uid="uid://ck0o5otm5qv8k" path="res://assets/ui/nav-bar-icons/explorer-off.svg" id="2_yaw8j"]
[ext_resource type="Texture2D" uid="uid://dpbvomx45a2bu" path="res://assets/ui/nav-bar-icons/map-off.svg" id="3_8isn2"]
[ext_resource type="PackedScene" uid="uid://c8dlajk0at8no" path="res://src/ui/components/backpack/backpack.tscn" id="3_y8pig"]
[ext_resource type="PackedScene" uid="uid://dkqc3of3acx2i" path="res://src/ui/components/map/map.tscn" id="4_a3kcs"]
[ext_resource type="Texture2D" uid="uid://3w81orc6dom3" path="res://assets/ui/nav-bar-icons/backpack-off.svg" id="4_bfyh5"]
[ext_resource type="Texture2D" uid="uid://3hwotq2y3fji" path="res://assets/ui/nav-bar-icons/settings-off.svg" id="5_04tqe"]

[sub_resource type="Gradient" id="Gradient_6v8vt"]
colors = PackedColorArray(0.705882, 0.733333, 0.776471, 1, 0.945098, 0.945098, 0.945098, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_enori"]
gradient = SubResource("Gradient_6v8vt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlgo7"]
bg_color = Color(0.0862745, 0.0784314, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nc286"]
bg_color = Color(0.262745, 0.25098, 0.290196, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MenuPortrait" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b83cq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_enori")

[node name="Control" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2

[node name="LabelMenu" type="Label" parent="Background/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 620.0
offset_right = 600.0
offset_bottom = 204.0
grow_vertical = 2
rotation = -1.5708
theme_override_colors/font_color = Color(1, 1, 1, 0.0705882)
theme_override_fonts/font = ExtResource("1_6w0r5")
theme_override_font_sizes/font_size = 140
text = "DISCOVER"
horizontal_alignment = 1
clip_text = true

[node name="Menus" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Discover" parent="Background/Menus" instance=ExtResource("1_nsju2")]
visible = false
layout_mode = 1

[node name="Backpack" parent="Background/Menus" instance=ExtResource("3_y8pig")]
visible = false
layout_mode = 1

[node name="Map" parent="Background/Menus" instance=ExtResource("4_a3kcs")]
visible = false
layout_mode = 1

[node name="BottomBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlgo7")

[node name="HBoxContainer_ButtonsPanel" type="HBoxContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 2
alignment = 1

[node name="Button_Discover" type="Button" parent="BottomBar/HBoxContainer_ButtonsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
theme_override_colors/font_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_normal_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_constants/icon_max_width = 80
toggle_mode = true
button_group = ExtResource("1_grte4")
text = "DISCOVER"
icon = ExtResource("2_yaw8j")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/disable_ui_sounds = true

[node name="Highlight" type="Panel" parent="BottomBar/HBoxContainer_ButtonsPanel/Button_Discover"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nc286")

[node name="Button_Map" type="Button" parent="BottomBar/HBoxContainer_ButtonsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
theme_override_colors/font_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_normal_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_constants/icon_max_width = 80
toggle_mode = true
button_group = ExtResource("1_grte4")
text = "GENESIS MAP"
icon = ExtResource("3_8isn2")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/disable_ui_sounds = true

[node name="Highlight" type="Panel" parent="BottomBar/HBoxContainer_ButtonsPanel/Button_Map"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nc286")

[node name="Button_Backpack" type="Button" parent="BottomBar/HBoxContainer_ButtonsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
theme_override_colors/font_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_normal_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_constants/icon_max_width = 80
toggle_mode = true
button_group = ExtResource("1_grte4")
text = "BACKPACK"
icon = ExtResource("4_bfyh5")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/disable_ui_sounds = true

[node name="Highlight" type="Panel" parent="BottomBar/HBoxContainer_ButtonsPanel/Button_Backpack"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nc286")

[node name="Button_Settings" type="Button" parent="BottomBar/HBoxContainer_ButtonsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
theme_override_colors/font_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_normal_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/icon_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_constants/icon_max_width = 80
toggle_mode = true
button_group = ExtResource("1_grte4")
text = "SETTINGS"
icon = ExtResource("5_04tqe")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/disable_ui_sounds = true

[node name="Highlight" type="Panel" parent="BottomBar/HBoxContainer_ButtonsPanel/Button_Settings"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nc286")

[connection signal="pressed" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Discover" to="." method="_on_button_discover_pressed"]
[connection signal="toggled" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Discover" to="." method="_on_button_discover_toggled"]
[connection signal="pressed" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Map" to="." method="_on_button_map_pressed"]
[connection signal="toggled" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Map" to="." method="_on_button_map_toggled"]
[connection signal="pressed" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Backpack" to="." method="_on_button_backpack_pressed"]
[connection signal="toggled" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Backpack" to="." method="_on_button_backpack_toggled"]
[connection signal="pressed" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Settings" to="." method="_on_button_settings_pressed"]
[connection signal="toggled" from="BottomBar/HBoxContainer_ButtonsPanel/Button_Settings" to="." method="_on_button_settings_toggled"]
